--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,6 @@ a {
     list-style-type: none;
     background: lime;
     position: absolute;
-    display: none;
 }
 
 .main-menu>li {
@@ -173,9 +172,46 @@ a {
     font-size: 1.6rem;
     font-family: "Noto Sans Bold";
     color: rgba(255, 255, 255, 0.95);
-    padding: 10px 21px 10px 20px;
     display: block;
-    border-left: 2px solid rgba(255, 255, 255, 0.9)
+    border-left: 2px solid rgba(255, 255, 255, 0.9);
+    line-height: 45px;
+    padding: 0 20px;
+    text-shadow: 1px 0px 0 #000, 0px 1px 0 #000, -1px 0px 0 #000, 0px -1px 0 #000;
+}
+
+.main-menu>li>a:hover {
+    /*color: hsla(45, 80%, 80%, 1);*/
+    color: #ff0;
+}
+
+.main-menu>li>a:hover::after {
+    content: "";
+    display: block;
+    border-top: 2px solid #181818;
+}
+
+.about-html {
+    display: block;
+}
+
+.about-css {
+    display: none;
+}
+
+.web-standards {
+    display: none;
+}
+
+.web-accessibility {
+    display: none;
+}
+
+.qna {
+    display: none;
+}
+
+.archive {
+    display: none;
 }
 
 .visual {
