--- a/css/style.css
+++ b/css/style.css
@@ -162,10 +162,13 @@ a {
     list-style-type: none;
     background: lime;
     position: absolute;
+    white-space: nowrap;
+    top: 47px;
 }
 
 .main-menu>li {
     float: left;
+    position: relative;
 }
 
 .main-menu>li>a {
@@ -190,8 +193,14 @@ a {
     border-top: 2px solid #181818;
 }
 
+.main-menu ul li {
+    display: inline-block;
+}
+
 .about-html {
     display: block;
+    top: 0;
+    left: 0;
 }
 
 .about-css {
