--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,21 @@ a {
     display: inline-block;
 }
 
+.main-menu ul a::before {
+    font-family: "webcafeIcon";
+    content: "r";
+    position: relative;
+    top: 2px;
+}
+
+.main-menu ul a:hover::before,
+.main-menu ul a:focus::before {
+    font-family: "webcafeIcon";
+    content: "c";
+    position: relative;
+    top: 2px;
+}
+
 .about-html {
     display: block;
     top: 0;
